--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,16 @@
     padding: 0;
 }
 
+
+/* header / navbar */
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: lightblue;
+    background-color: rgb(43, 73, 137);
     padding: 10px;
+    position: relative;
+    border-bottom: white solid 4px;
 }
 
 header h1 {
@@ -28,4 +32,68 @@ header a {
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
+}
+
+/* Hero photo */
+
+.hero {
+    height: 80vh;
+    width: 100%;
+    background-image: url("../images/hero1.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+/* I saw a repeating pattern with flex container with sidebar and content*/
+.container {
+    background-color: aqua;
+    display: flex;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.sidebar {
+    padding: 20px;
+    border-right: black solid 4px;
+    font-family: "Bebas Neue", sans-serif;
+    text-align: right;
+    font-size: 25px;
+    width: 20%;
+}
+
+.content {
+    display: flex;
+    flex-wrap: wrap;
+    width: 75%;
+    padding: 10px;
+    margin: 0 10px;
+}
+
+
+/* My Work */
+
+.myWork {
+    background-color: aqua;
+    display: flex;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.card  {
+    border: blue solid 4px;
+    width: 48%;
+    height: 250px;
+    margin: 4px;
+    position: relative;
+}
+
+.card h3 {
+    position: absolute;
+    background-color: blue;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
