--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,21 +2,33 @@
     margin: 0;
     padding: 0;
 }
+/* color pallet */
+:root {
+    --darkblue: #023040;
+    --lightblue: #4a748c;
+    --darkgreen: #082922;
+    --lightgreen: #708563;
+    --white: #f1f1f1;
+    --black: #000000;
+}
 
+body {
+    background-color: var(--darkblue);
+}
 
 /* header / navbar */
 header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    background-color: rgb(43, 73, 137);
+    align-items: center;  
     padding: 10px;
     position: relative;
-    border-bottom: white solid 4px;
+    border-bottom: var(--white) solid 4px;
+    background-color: var(--lightblue);
 }
 
 header h1 {
-    color: white;
+    color: var(--white);
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -25,7 +37,7 @@ header h1 {
 }
 
 header a {
-    color: white;
+    color: var(--white);
     padding: 10px 15px;
     text-decoration: none;
     font-family: "Noto Sans", sans-serif;
@@ -42,19 +54,22 @@ header a {
     background-image: url("../images/hero1.jpg");
     background-size: cover;
     background-position: center;
+    border-bottom: var(--darkblue) solid 4px;
 }
 
 /* I saw a repeating pattern with flex container with sidebar and content*/
 .container {
-    background-color: aqua;
+    background-color: var(--white);
     display: flex;
     width: 100%;
     margin-bottom: 10px;
 }
 
 .sidebar {
+    background-color: var(--lightblue);
+    color: var(--white);
     padding: 20px;
-    border-right: black solid 4px;
+    border-right: var(--lightgreen) solid 4px;
     font-family: "Bebas Neue", sans-serif;
     text-align: right;
     font-size: 25px;
@@ -62,38 +77,113 @@ header a {
 }
 
 .content {
+    background-color: var(--white);
     display: flex;
     flex-wrap: wrap;
-    width: 75%;
-    padding: 10px;
-    margin: 0 10px;
-}
-
-
-/* My Work */
-
-.myWork {
-    background-color: aqua;
-    display: flex;
+    box-sizing: border-box;
     width: 100%;
-    margin-bottom: 20px;
+    padding: 10px;
+    margin: 0 60px 0 20px;
 }
 
-.card  {
-    border: blue solid 4px;
-    width: 48%;
-    height: 250px;
+
+/* <<<My Work>>> */
+/* I had to use the calc to add the margin with out the item overflowing and I Found the solution on stackover flow */
+
+.card {
+    width: calc(50% - 8px); 
+    height: 150px;
+    box-sizing: border-box;
+    border: var(--lightgreen) solid 4px;
     margin: 4px;
     position: relative;
+    overflow: hidden;
 }
 
 .card h3 {
     position: absolute;
-    background-color: blue;
+    background-color: var(--lightgreen);
+    font-family: "Noto Sans", sans-serif;
+    padding: 8px;
+    border-radius: 0 10px 10px 0;
+    font-size: 30px;
+    top: 15px;
+    z-index: 1;
 }
 
 .card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.card a {
+    text-decoration: none;
+    color: white;
+}
+
+/* making the first card bigger */
+.card:nth-child(1) {
+    width: 100%;
+    height: 300px;
+}
+
+/* IMG hover affect */
+.card img:hover {
+    transform: scale(1.02);
+    z-index: -2;
+}
+
+
+/* Resizing the card at 992px */
+@media screen and (max-width: 992px) {
+    .card {
+        width: 100%;
+    }
+}
+
+/* Resizing at 730px */
+@media screen and (max-width: 815px) {
+    .container {
+        background-color: var(--white);
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .sidebar {
+        background-color: var(--lightblue);
+        color: var(--white);
+        padding: 20px;
+        border-right: none;
+        border-bottom: var(--lightgreen) solid 4px;
+        font-family: "Bebas Neue", sans-serif;
+        text-align: center;
+        font-size: 25px;
+        width: auto;
+    }
+
+    .content {
+        background-color: var(--white);
+        display: flex;
+        flex-wrap: wrap;
+        box-sizing: border-box;
+        width: auto;
+        padding: 10px;
+        margin: 0 20px;
+    }
+}
+
+
+
+/* <<<footer>>> */
+
+footer a {
+    width: 100%;
+}
+
+footer .card:nth-child(1) {
+    width: 100%;
+    height: 300px;
 }
